# Flight-Simulator-Problem-Solver

./: AStar.h  Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManger.cpp  FileCacheManger.h  GeneralClientHandler.cpp  GeneralClientHandler.h  GraphFile.cpp  GraphFile.h  Main.cpp  Main.h  Matrix.cpp  Matrix.h  MatrixGenerator.cpp  MatrixGenerator.h  MatrixHandler.cpp  MatrixHandler.h  MatrixTask.h  MyParams.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  OpenSocket.cpp  ParallelServer.cpp  ParallelServer.h  Point.cpp  README.md  README.txt  Searchable.h  Searcher.h  SearcherSolver.cpp  (+18 more)
